# freelance

./: .gitignore  Git-commit-guidelines.md  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/client-api/: Dockerfile  check_backend.py  chromadb.Dockerfile  jwt_handler.py  main.py  package.json  pyproject.toml  requirements.txt  sample-env.txt  verify_config.py
apps/client-api/auth/: get_current_user.py
apps/client-api/config/: clients.py  env.py
apps/client-api/core/: __init__.py  config.py  database.py
apps/client-api/creator_app/: __init__.py  main.py
apps/client-api/creator_app/core/: database.py
apps/client-api/creator_app/models/: __init__.py  (+2 more)
apps/client-api/models/: Auth.py  bank_details.py  client_onboarding.py  creator_details.py  creators_model.py  homePage.py  onboarding.py  payment.py  portfolio.py  pricing.py  projectRequest.py  user.py  verification.py
apps/client-api/routers/: Auth.py  bank_details_route.py  call_route.py  client_onboarding_route.py  creators_route.py  details_route.py  email_route.py  homePage_route.py  onboarding_route.py  payment_route.py  portfolio_route.py  pricing_route.py  projects_route.py  session_routes.py  user_router.py  verification_route.py
apps/client-api/scripts/: add_client_phone.py
apps/client-api/services/: Auth.py  bank_validation_service.py  claudinary_service.py  client_onboarding_service.py  creators_service.py  email_service.py  homePage_service.py  onboard_service.py  payment_service.py  projects_service.py  session_manager.py  user_service.py
apps/client-api/tools/: creator_tools.py
(+115 files in other folders)
