[project]
name = "client-api"
version = "0.1.0"
description = "Client API with Creator Recommendation System"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "cloudinary>=1.44.1",
    "email-validator>=2.3.0",
    "fastapi>=0.122.0",
    "firebase-admin>=7.1.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "uvicorn>=0.38.0",
    "razorpay>=1.3.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "langchain>=0.3.7",
    "langchain-groq>=0.2.1",
    "langchain-core>=0.3.15",
    "langgraph>=0.2.0",
]
